--- a/full-stack-files/templates/guests/guest-contribute.html
+++ b/full-stack-files/templates/guests/guest-contribute.html
@@ -89,19 +89,19 @@
                             <b class="col-md-2 col-sm-12 col-lg-2">Type of Lead: </b>
                             <div class="col-md-3 col-sm-12 col-lg-3">
                                 <input type="radio" class="btn-check" name="lead_type"
-                                    id="secondary-outlined" autocomplete="off" value="public" checked>
+                                    id="secondary-outlined" autocomplete="off" value="Public" checked>
                                 <label class="btn btn-outline-secondary" for="secondary-outlined">Public
                                     (Government)</label>
                             </div>
                             <div class="col-md-3 col-sm-12 col-lg-3">
                                 <input type="radio" class="btn-check" name="lead_type" id="info-outlined"
-                                    autocomplete="off" value="private">
+                                    autocomplete="off" value="Private">
                                 <label class="btn btn-outline-info" for="info-outlined">Private (For
                                     Profit)</label>
                             </div>
                             <div class="col-md-3 col-sm-12 col-lg-3">
                                 <input type="radio" class="btn-check" name="lead_type" id="dark-outlined"
-                                    autocomplete="off" value="community">
+                                    autocomplete="off" value="Community">
                                 <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
                                     (Non-Profit)</label>
                             </div>
