Width re-limited to default limits

--- a/full-stack-files/templates/guests/guest-dashboard.html
+++ b/full-stack-files/templates/guests/guest-dashboard.html
@@ -49,7 +49,7 @@
         </div>
         <hr class="content-divider">
         <div id="dashboard" class="mt-4">
-            <table id="dashboard-table" class="display border rounded" style="width:100%">
+            <table id="dashboard-table" class="display border rounded">
                 <thead>
                     <tr>
                         <th>Name/Org.</th>
