--- a/full-stack-files/templates/Teams/team-add-modify.html
+++ b/full-stack-files/templates/Teams/team-add-modify.html
@@ -167,7 +167,7 @@
                         <h2><i class="bi bi-gear"></i> <u>Modify leads</u> </h2>
 
                         <div id="dashboard" class="mt-4">
-                            <table id="dashboard-table" class="display border rounded" style="width:100%">
+                            <table id="dashboard-table" class="display border rounded">
                                 <thead>
                                     <tr>
                                         <th>Name/Org.</th>
@@ -298,7 +298,7 @@
                         <h2> <i class="fa fa-check" aria-hidden="true"></i> <u>Verify Leads</u> </h2>
 
                         <div id="dashboard" class="mt-4">
-                            <table id="dashboard-table2" class="display border rounded" style="width:100%">
+                            <table id="dashboard-table2" class="display border rounded">
                                 <thead>
                                     <tr>
                                         <th>Name/Org.</th>
