Changing the way footer is positioned

--- a/full-stack-files/templates/base.html
+++ b/full-stack-files/templates/base.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
     <!-- Navbar css -->
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <!-- Footer CSS -->
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     
     {% if 'team' in request.path %}
     <!-- Custom CSS for team pages -->
