fixed footer on login page

--- a/full-stack-files/templates/guests/login.html
+++ b/full-stack-files/templates/guests/login.html
@@ -85,8 +85,10 @@
 
     </div>
 
+    <div class="position-absolute top-100" style="width: 100%;">
     <!-- Footer -->
     {% include 'partials/_footer.html' %}
+    </div>
 
 </body>
 
