Setup navigation and page templates for team pages

--- a/full-stack-files/templates/Teams/team-modify.html
+++ b/full-stack-files/templates/Teams/team-modify.html
@@ -9,14 +9,13 @@
                 <div class="d-flex align-items-start sidebar-content">
                     <div class="nav flex-column nav-pills h5" id="v-pills-tab" role="tablist"
                         aria-orientation="vertical">
-                        <a class="nav-link  mt-3"  type="button" href="#">
+                        <a class="nav-link active mt-3"  type="button" href="{% url 'addleads' %}">
                             <i class="bi bi-plus-circle"></i> Add Leads
                         </a>
-                        <a class="nav-link active mt-3"  type="button"  >
-                            <i class="bi bi-gear" href="#"></i> Modify leads
+                        <a class="nav-link mt-3"  type="button" href="{% url 'modifyleads' %}">
+                            <i class="bi bi-gear"></i> Modify leads
                         </a>
-                        <a class="nav-link  mt-3"  type="button" 
-                           href="#" >
+                        <a class="nav-link  mt-3"  type="button" href="{% url 'verifyleads' %}" >
                             <i class="fa fa-check" aria-hidden="true"></i> Verify leads
                         </a>
                     </div>
