--- a/full-stack-files/templates/partials/_navbar.html
+++ b/full-stack-files/templates/partials/_navbar.html
@@ -30,7 +30,7 @@
                             </li>
                             <li class="nav-item">
                                 <a 
-                                {% if 'team/addleads' in request.path %} 
+                                {% if 'team/addleads' in request.path or 'team/modifyleads' in request.path or 'team/verifyleads' in request.path %} 
                                     class="nav-link active" 
                                 {% else %} class="nav-link" 
                                 {% endif %}
